--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Open Payment Data Visualization
-description: Open Payment Data Visualization Project by University of San Francisco
+title: Open Payment Data Visualization By Apache Spark
+description: Xinming WANG, Yufeng XING, Kris KNAPP, Chandan NAYAK
 author: Xinming WANG, Yufeng XING, Kris KNAPP, Chandan NAYAK
